--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
     "color-thief-browser": "^2.0.2",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
