deploy: versão estável SharkMusic

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/inter": "^5.2.8",
     "color-thief-browser": "^2.0.2",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
